# dnd_mud

./: .gitignore  AGENTS.md  Gemfile  LICENSE  Makefile  README.md  __init__.py  config.yaml  conftest.py  creature.py  database.yaml  errors.py  fix_print_function.py  i18n.py  ideology.py  main.py  massages.py  mypy.ini  package.json  player.py  pyproject.toml  race_descriptions.py  run.py  setup.py  yaml_parse.py
.cursor/: cli.json
.cursor/rules/: 00-project.mdc  dnd-mud-core.mdc  dnd-mud-data.mdc  dnd-mud-git.mdc  dnd-mud-python-312.mdc  dnd-mud-python-simple.mdc  dnd-mud-python.mdc  dnd-mud-tests.mdc  dnd-mud-verify.mdc  dnd-mud-workflow.mdc  ironbee-devtools-use.mdc  project.mdc  user.mdc
.githooks/: pre-commit
.github/workflows/: build.yml  ci.yml  codeql.yml  pr-dev-to-main-check.yml  sync-dev-with-main.yml
.windsurf/rules/: clean_architecture_rules.md  design_patterns_rules.md  programming_principles.md  python_versions_changes.md
adventures/: lost_mine.yaml  tutorial.yaml
app/controllers/: wellcomes_controller.rb
app/models/: wellcome.rb
config/: __init__.py  application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb  settings.json
config/environments/: production.rb
core/: __init__.py  abilities.py  adventure.py  asi.py  backgrounds.py  catalog_loader.py  character.py  character_builder.py  character_storage.py  checks.py  class_features.py  classes.py  combat.py  constants.py  dice.py  difficulty.py  equipment.py  expertise.py  feat_apply.py  feat_descriptions.py  feat_requirements.py  feat_visibility.py  feats.py  feats_grants.py  feats_loader.py  game_engine.py  grant_mechanics.py  grants.py  hp_bonuses.py  inventory.py  io.py  languages.py  levels.py  localization.py  mod_loader.py  models.py  proficiencies.py  proficiency_checks.py  proficiency_collect.py  progression.py  (+9 more)
data/: backgrounds.yaml  characters.json  classes.yaml  languages.yaml  races.yaml  settings.json  sizes.yaml  tools.yaml  weapon.yaml
data/abilities/: abilities.yaml  en.yaml  ru.yaml
data/adventures/: tutorial_adventure.yaml
data/backgrounds/: backgrounds.yaml  en.yaml  ru.yaml
data/classes/: classes.yaml  en.yaml  ru.yaml
data/config/: game_config.yaml  game_settings.json
data/i18n/: characters.yaml  en.yaml  ru.yaml
data/languages/: languages.yaml  ru.yaml
data/mods/: README.md
data/races/: races.yaml  ru.yaml
data/sizes/: ru.yaml  sizes.yaml
data/skills/: ru.yaml  skills.yaml
data/translations/: en.json  ru.json
data/yaml/: game_config.yaml  localization.yaml  settings.yaml
database/: abilities.yaml  armor.yaml  characters.yaml  classes.yaml  constants.yaml  equipment.yaml  races.yaml  settings.yaml  sizes.yaml  skills.yaml
database/_future/: README.md
database/backgrounds/: backgrounds.yaml
database/classes/: classes.yaml
database/content/: adventures.yaml
database/core/: abilities.yaml  constants.yaml  languages.yaml  settings.json.example  settings.yaml
database/equipment/: armor.yaml  equipment.yaml  tools.yaml  weapon.yaml
database/progression/: characters.yaml  feats.yaml
database/races/: features.yaml  races.yaml
database/strings/: en.yaml  ru.yaml
docs/: ABILITY_GENERATION.md  AGENTS_TEST_RESULTS.md  API.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CURSOR_AGENT_SETUP.md  DATA_SCHEMA.md  DEVELOPMENT.md  DND_RULES.md  MCP_CHECK_REPORT.md  MODS.md  MUD_PRD.md  PLAN.md  PRD.md  PYTHON_312.md  README.md  README_RACES.md  README_UI.md  TECHNICAL.md  TESTING.md  TESTING_SUMMARY.md  TROUBLESHOOTING.md  UI.md  action_plan.md  api.md  architecture.md  architecture_analysis.md  character-creation-system.md  character-system-tz.md  clean-architecture.md  contributing.md  design_patterns.md  dnd-mud-architecture.md  dnd-mud-plan.md  i18n_architecture.md  i18n_guide.md  i18n_implementation.md  localization_docs.md  modding.md  (+8 more)
docs/agents/: MODELS.md  README.md  agent-router.md  architect.md  code-reviewer.md  doc-writer.md  security-checker.md  test-writer.md
docs/api/: README.md
docs/architecture/: README.md  code_examples.md  decision_log.md  dnd-mud-architecture.md
docs/archive/: AUTHENTICATION_STATUS.md  FINAL_STATUS.md  MCP_CHECK_REPORT.md  MCP_STATUS_REPORT.md  MULTI_AGENT_STATUS.md  README.md
docs/character-creation/: README.md
docs/character_creation/: 01_name_input.md  02_race_selection.md  02_race_selection_implementation.md  03_ability_generation.md  04_class_selection.md  06_skill_selection.md  (+4 more)
game/: __init__.py
localization/: en.yaml  ru.yaml
mods/: __init__.py  example_mod.yaml
saves/: 8ca1f1c2-a18b-4fbc-9ccd-c9aa7cffee3c.json  b851809e-8d4f-4154-8111-4dfe0b35c66d.json  ebf3c438-9084-4b99-a608-3312359ed6ca.json  metadata.json
scripts/: __init__.py  authenticate_cursor_agent.sh  build_rules_index.py  phb_data.py  phb_extract.py  phb_generate_rules.py  phb_spell_parse.py  phb_text.py  phb_validate_rules.py  rules_class_data.py  test_mcp_config.sh  validate_data.py  verify_targets.py
src/: __init__.py  constants.py  dependency_injection.py  di_container.py  main.py  welcome_dto.py  welcome_screen.py  welcome_use_case.py
tests/: README.md  __init__.py  conftest.py  creation_helpers.py  demo_race_integration.py  menus_helpers.py  test_abilities.py  test_ability_skill_adapter.py  test_adventure.py  test_adventure_logic.py  test_all.py  test_asi.py  test_background_equipment.py  test_backgrounds.py  test_catalog_loader.py  test_character.py  test_character_builder.py  test_character_creation.py  test_character_extended.py  test_character_manager.py  test_character_menu.py  test_checks.py  test_class_features.py  test_class_features_ui.py  test_combat.py  test_config.py  test_constants.py  test_creation_handlers.py  test_custom_input.py  test_data_loader.py  test_data_schema.py  test_dice.py  test_difficulty.py  test_display.py  test_domain_only.py  test_equipment.py  test_expertise.py  test_feats.py  test_final.py  test_functionality.py  (+51 more)
ui/: __init__.py  input_handler.py  menus.py  settings_menu.py  welcome_screen.py  window_manager.py
utils/: data_validator.py  watchdog_handler.py
(+1178 files in other folders)
