[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnd-text-mud-5e"
version = "0.1.0"
description = "Однопользовательская консольная текстовая игра по мотивам Dungeons & Dragons 5e"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tomas", email = "tomas@example.com"}
]
maintainers = [
    {name = "Tomas", email = "tomas@example.com"}
]
keywords = ["dnd", "mud", "text", "game", "rpg", "terminal", "console"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Games/Entertainment :: Text Based",
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/discipleartem/dnd_mud"
Repository = "https://github.com/discipleartem/dnd_mud"
Documentation = "https://github.com/discipleartem/dnd_mud/docs"
"Bug Tracker" = "https://github.com/discipleartem/dnd_mud/issues"

[project.scripts]
dnd-mud-5e = "main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Указываем, что наши локальные модули типизированы
[[tool.mypy.overrides]]
module = [
    "entities.*",
    "use_cases.*", 
    "core.*",
    "interfaces.*",
    "ui.*",
    "adapters.*",
    "dtos.*",
    "console.*"
]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "yaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src"]
python_paths = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
