[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dnd_mud"
version = "0.1.0"
description = "Текстовая MUD-игра по мотивам Dungeons & Dragons 5e"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["mud", "dnd", "text-game", "rpg"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Terminals",
]

dependencies = [
    "colorama>=0.4.6",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/discipleartem/dnd_mud"
Repository = "https://github.com/discipleartem/dnd_mud.git"
Bug_Tracker = "https://github.com/discipleartem/dnd_mud/issues"

[project.scripts]
dnd_mud = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.1",
    "black>=24.0",
    "jsonschema>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ui*", "mods*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unreachable = true
disallow_untyped_defs = false

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"ui/menus/_deps.py" = ["F401"]
"scripts/rules_class_data.py" = ["E501"]
"scripts/build_rules_index.py" = ["E501"]
"scripts/phb_spell_parse.py" = ["E501", "SIM102"]

[tool.black]
target-version = ["py312"]
line-length = 79